Added tictactoe. still have a lot more to add

--- a/index.html
+++ b/index.html
@@ -2,11 +2,24 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <title>Home</title>
+    <title>About</title>
     <link rel="stylesheet" href="./assets/style.css">
   </head>
   <body>
-    <h1>App collection</h1>
+    <header class="header">
+      <ul>
+        <li class="menu-item"><a href="./tictactoe.html">TicTacToe</a></li>
+        <li class="menu-item"><a href="#news">Etch-A-Sketch</a></li>
+        <li class="menu-item"><a href="#contact">RockPaperScissors</a></li>
+        <li class="menu-item"><a href="#contact">Calculator</a></li>
+        <li class="menu-item"><a href="#contact">Library</a></li>
+        <li style="float:right" class="about-item"><a class="active" href="#about">About</a></li>
+      </ul>
+    </header>
+    <section>
+      Welcome to my website. It was created to showcase a collection of small projects together.
+    </section>
+    
     <script src="./assets/javascript.js"></script>
   </body>
   </head>
